# advent-2019

./: Cargo.toml  get-input.sh
inputs/: input-08-2019.txt
solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs
src/: main.rs
