[package]
name = "advent-2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
gcd = "2.3.0"
itertools = "0.12.0"
log = "0.4.20"
nom = "7.1.3"
snafu = "0.7.5"
